# kalshi-trading

./: .gitignore  PLAN.md  PROJECT_BRIEF.md  README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
scripts/: backfill_gefs.py  com.kalshiweather.logkalshi.plist  com.kalshiweather.papertrade.plist  compare_fairvalue.py  discover_kalshi_series.py  fetch_kalshi_rules.py  fit_bias.py  hello.py  ingest_gefs.py  ingest_observations.py  log_kalshi.py  paper_trade.py  run_backtest.py  run_calibration.py
src/backtest/: calibration.py  engine.py
src/common/: config.py  storage.py
src/ingest/: gefs.py  kalshi.py  observations.py
src/model/: bias.py  daily_high.py  fairvalue.py
src/papertrade/: runner.py
tests/: test_bias.py  test_calibration.py  test_daily_high.py  test_engine.py  test_fairvalue.py  test_gefs.py  test_kalshi.py  test_observations.py  test_papertrade.py  test_smoke.py
tests/fixtures/: sample.idx  sample_cli.json
