[project]
name = "kalshi-weather"
version = "0.1.0"
description = "Research system testing whether Kalshi daily temperature markets are mispriced vs. NOAA GEFS ensemble forecasts."
requires-python = ">=3.11"
dependencies = [
    # HTTP
    "httpx>=0.27",
    # data wrangling
    "polars>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    # config
    "pyyaml>=6.0",
    # GRIB / ensemble (system ecCodes required — see README; verified in Phase 1)
    "xarray>=2024.1.0",
    "cfgrib>=0.9.11",
    # storage
    "pyarrow>=16.0",
    # NOAA Open Data S3 (anonymous access — no AWS account needed)
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
# Lets tests `import src...` without installing the package.
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
